syntax = "proto3";

package ArmoniK.api.grpc.v1;

service Submitter {
  rpc CancelTasks (TaskFilter) returns (Empty);
}

message TaskFilter {
	message IdsRequest {
		repeated string ids = 1;
	}
	oneof Ids {
		IdsRequest task = 3;
	}
}

message Empty {}
